Fix layout issue in mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  padding: 0 24px;
+  padding: 0px;
   margin: 0;
   width: 100%;
   height: 100%;
@@ -21,6 +21,6 @@ code {
 
 @media (max-width: 800px) {
   img {
-    width: 100%
+    width: 100%;
   }
 }
